<resources>
    <string name="app_name">Layouts</string>
    <string name="ac1">comentario acessivel 1</string>
    <string name="ac2">comentario acessivel 2</string>
    <string name="ac3">comentario acessivel 3</string>
    <string name="ac4">comentario acessivel 4</string>
    <string name="amoda">À Moda do freguês</string>
    <string name="q4">4 Queijos</string>
    <string name="q5">5 Queijos</string>
    <string name="q6">6 Queijos</string>
    <string name="barra">/</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_ast">*</string>
    <string name="string_4">4</string>
    <string name="string51">5</string>
    <string name="string_6">6</string>
    <string name="string_tr">-</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_plus">+</string>
    <string name="string_0">0</string>
    <string name="string_00">00</string>
    <string name="string_equal">=</string>
</resources>